--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^3.0.18",
+    "@reown/appkit": "^1.8.17",
+    "@reown/appkit-adapter-wagmi": "^1.8.17",
     "@tabler/icons-react": "^3.36.1",
+    "@tanstack/react-query": "^5.90.19",
     "ai": "^6.0.48",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -19,7 +22,9 @@
     "next": "16.1.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "viem": "^2.44.4",
+    "wagmi": "^3.4.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
