--- a/builder/package.json
+++ b/builder/package.json
@@ -6,15 +6,19 @@
     "db:migrate": "bun drizzle-kit migrate"
   },
   "dependencies": {
+    "@ai-sdk/groq": "^3.0.15",
+    "@ai-sdk/mcp": "^1.0.13",
     "@neondatabase/serverless": "^1.0.2",
+    "ai": "^6.0.48",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
     "hono": "^4.11.4",
-    "morphcloud": "^0.0.20"
+    "json-schema-to-zod": "^2.4.1",
+    "morphcloud": "^0.0.20",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/bun": "latest",
     "drizzle-kit": "^0.31.8"
   }
 }
-
