--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^3.0.18",
+    "@ai-sdk/react": "^3.0.50",
+    "@crypto.com/facilitator-client": "^1.0.4",
     "@reown/appkit": "^1.8.17",
     "@reown/appkit-adapter-wagmi": "^1.8.17",
     "@tabler/icons-react": "^3.36.1",
@@ -17,6 +19,7 @@
     "ai": "^6.0.48",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "ethers": "^6.16.0",
     "lucide-react": "^0.562.0",
     "motion": "^12.26.2",
     "next": "16.1.3",
